--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,17 @@ services:
 #        ipv4_address: 192.168.0.10
         ipv4_address: 172.28.0.10
 
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8081:8080
+    links:
+      - mariadb:db
+
+
+
+
 networks:
  mysqlcluster:
 #  driver: overlay
